# oscar-etl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-20-oscar-etl-design.md  2026-03-20-oscar-etl-implementation.md
src/oscar_etl/: __main__.py  cli.py  edf.py  etl.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_edf.py  test_etl_helpers.py  test_etl_output.py  test_sessions.py
