[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oscar-etl"
version = "0.1.0"
description = "Extract clean CSVs from your OSCAR CPAP data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
oscar-etl = "oscar_etl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
